--- a/Client/index.html
+++ b/Client/index.html
@@ -5,6 +5,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
         
         <script src="main.js"></script>
+        <script src="Ui/button.js"></script>
         <script src="oliverButton.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
