--- a/Client/index.html
+++ b/Client/index.html
@@ -10,6 +10,7 @@
         <script src="Ui/button.js"></script>
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/menu.js"></script>
+        <script src="Lobby/guest.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
 
