--- a/Client/index.html
+++ b/Client/index.html
@@ -2,12 +2,16 @@
 
 <html>
     <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
         
         <script src="main.js"></script>
         <script src="input.js"></script>
         <script src="application.js"></script>
+
         <script src="Ui/button.js"></script>
+        <script src="Ui/text.js"></script>
+
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/menu.js"></script>
         <script src="Lobby/guest.js"></script>
