--- a/Client/index.html
+++ b/Client/index.html
@@ -13,8 +13,8 @@
         <script src="Ui/text.js"></script>
 
         <script src="Lobby/lobby.js"></script>
-        <script src="Lobby/menu.js"></script>
         <script src="Lobby/guest.js"></script>
+        <script src="Lobby/owner.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
 
