p5 extensions for ui

--- a/Client/index.html
+++ b/Client/index.html
@@ -9,8 +9,7 @@
         <script src="input.js"></script>
         <script src="application.js"></script>
 
-        <script src="Ui/button.js"></script>
-        <script src="Ui/text.js"></script>
+        <script src="p5Extensions.js"></script>
 
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/guest.js"></script>
