--- a/Client/index.html
+++ b/Client/index.html
@@ -6,9 +6,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
         
         <script src="main.js"></script>
-        <script src="input.js"></script>
         <script src="application.js"></script>
-
+        <script src="input.js"></script>
+        <script src="socket.js"></script>
         <script src="p5Extensions.js"></script>
 
         <script src="Lobby/lobby.js"></script>
