last parody commit

--- a/Client/index.html
+++ b/Client/index.html
@@ -14,6 +14,7 @@
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/guest.js"></script>
         <script src="Lobby/owner.js"></script>
+        <script src="Game/game.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
 
