--- a/Client/index.html
+++ b/Client/index.html
@@ -11,6 +11,7 @@
         <script src="socket.js"></script>
         <script src="p5Extensions.js"></script>
 
+        <script src="Lobby/drawHelper.js"></script>
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/guest.js"></script>
         <script src="Lobby/owner.js"></script>
