--- a/Client/index.html
+++ b/Client/index.html
@@ -15,7 +15,11 @@
         <script src="Lobby/lobby.js"></script>
         <script src="Lobby/guest.js"></script>
         <script src="Lobby/owner.js"></script>
+        <script src="Game/drawHelper.js"></script>
         <script src="Game/game.js"></script>
+        <script src="Game/presenter.js"></script>
+        <script src="Game/guesser.js"></script>
+        <script src="Game/spectator.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
 
