--- a/Client/index.html
+++ b/Client/index.html
@@ -13,6 +13,7 @@
 
         <script src="lobby.js"></script>
         <script src="game.js"></script>
+        <script src="imageLoader.js"></script>
     </head>
     <body style="margin:0%; overflow:hidden">
 
