--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -2,8 +2,17 @@
 <html>
     <head>
         <title>Codegames version2.0 featuring html and css</title>
+
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/lobby.css">
     </head>
     <body>
-        <p>Hello world!</p>
+        <div class="wall" id="players">
+            <h1>Players in Room</h1>
+        </div>
+        <div>
+            <h1>Room Options</h1>
+        </div class="wall" id="options">
+        <button id="start">Start</button>
     </body>
 </html>
