--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -7,12 +7,24 @@
         <link rel="stylesheet" href="css/lobby.css">
     </head>
     <body>
+        <!-- Player list -->
         <div class="wall" id="players">
-            <h1>Players in Room</h1>
+            <h2>Players in Room</h2>
+            <ul></ul>
         </div>
-        <div>
-            <h1>Room Options</h1>
-        </div class="wall" id="options">
+
+        <!-- Options list -->
+        <div class="wall" id="options">
+            <h2>Room Options</h2>
+            <ul>
+                <li>Option 1: </li>
+            </ul>
+        </div>
+
+        <!-- Logo / title -->
+        <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
+
+        <!-- Start game button -->
         <button id="start">Start</button>
     </body>
 </html>
