--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Codegames version2.0 featuring html and css</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
+        <script src="server.js"></script>
     </head>
     <body>
         <p>Hello world!</p>
