--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -4,27 +4,22 @@
         <title>Codegames version2.0 featuring html and css</title>
 
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/lobby.css">
+        <link rel="stylesheet" href="css/welcome.css">
     </head>
     <body>
-        <!-- Player list -->
-        <div class="wall" id="players">
-            <h2>Players in Room</h2>
-            <ul></ul>
-        </div>
-
-        <!-- Options list -->
-        <div class="wall" id="options">
-            <h2>Room Options</h2>
-            <ul>
-                <li>Option 1: </li>
-            </ul>
-        </div>
-
         <!-- Logo / title -->
         <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
 
-        <!-- Start game button -->
-        <button id="start">Start</button>
+        <!-- Join box-->
+        <div id="join">
+            <h2>Welcome to Code Games!</h2>
+            <form>
+                <h3>Enter name</h3>
+                <input class="inputTxt" type="text" name="Name">
+                <h3>Enter room ID</h3>
+                <input class="inputTxt" type="text" name="Room ID">
+                <input id="joinBtn" type="button" onclick="myFunction()" value="Join">
+            </form>
+        </div>
     </body>
 </html>
