--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -4,6 +4,7 @@
         <title>Codegames version2.0 featuring html and css</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
         <script src="server.js"></script>
+        <script src="main.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/welcome.css">
@@ -22,7 +23,7 @@
                 <h3>Room ID</h3>
                 <p>Enter the ID of the room you want to join, or leave blank to join a random room</p>
                 <input class="inputTxt" type="text" name="Room ID">
-                <input id="joinBtn" class="btn" type="button" onclick="myFunction()" value="Join">
+                <input id="joinBtn" class="btn" type="button" onclick="server.joinRoom('c')" value="Join">
             </form>
         </div>
     </body>
