--- a/Front-end/lobby.html
+++ b/Front-end/lobby.html
@@ -3,8 +3,8 @@
     <head>
         <title>Codegames version2.0 featuring html and css</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
-        <script src="../server.js"></script>
-        <script src="../main.js"></script>
+        <script src="server.js"></script>
+        <script src="main.js"></script>
 
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/lobby.css">
