--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -7,8 +7,56 @@
         <script src="main.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/welcome.css">
+        <link rel="stylesheet" href="css/lobby.css">
     </head>
     <body>
-        <iframe src="welcome.html"></iframe>
+        <!-- Welcome -->
+        <page id="welcome">
+            <!-- Logo / title -->
+            <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
+
+            <!-- Join box-->
+            <div id="join">
+                <h2>Welcome to Code Games!</h2>
+                <form>
+                    <h3>Name</h3>
+                    <p>Enter the nickname you would like to be recognized as in the game</p>
+                    <input class="inputTxt" id="welcomeInputName" type="text" name="name" placeholder="Name">
+                    <h3>Room ID</h3>
+                    <p>Enter the ID of the room you want to join, or leave blank to join a random room</p>
+                    <input class="inputTxt" id="welcomeInputRid" type="text" name="rid" placeholder="Room ID">
+                    <input id="joinBtn" class="btn" type="button" onclick="joinBtnOnClick()" value="Join">
+                </form>
+            </div>
+        </page>
+
+        <!-- Lobby -->
+        <page id="lobby">
+            <!-- Player list -->
+            <div class="wall" id="players">
+                <h2>Players in Room</h2>
+                <ul></ul>
+            </div>
+
+            <!-- Options list -->
+            <div class="wall" id="options">
+                <h2>Room Options</h2>
+                <ul>
+                    <li>Option 1: </li>
+                </ul>
+            </div>
+
+            <!-- Logo / title -->
+            <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
+
+            <!-- Start game button -->
+            <button id="start">Start</button>
+        </page>
+
+        <!-- Game -->
+        <page id="game">
+
+        </page>
     </body>
 </html>
