--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -52,6 +52,12 @@
 
             <!-- Start game button -->
             <button id="start">Start</button>
+
+            <!-- Name -->
+            <p id="name"></p>
+            <form id="nameEdit">
+                <input class="inputTxt" id="nameEditField" type="text" name="nameChange">
+            </form>
         </page>
 
         <!-- Game -->
