--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -43,7 +43,7 @@
             <div class="wall" id="options">
                 <h2>Room Options</h2>
                 <ul>
-                    <li>Option 1: </li>
+                    <li>Add / remove team: </li>
                 </ul>
             </div>
 
@@ -54,9 +54,8 @@
             <button id="start">Start</button>
 
             <!-- Name -->
-            <p id="name"></p>
-            <form id="nameEdit">
-                <input class="inputTxt" id="nameEditField" type="text" name="nameChange">
+            <form id="name">
+                Hello <input class="inputTxt" id="nameEditField" type="text" name="nameChange">, press your name to change it
             </form>
         </page>
 
