--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -44,6 +44,10 @@
                 <h2>Room Options</h2>
                 <ul>
                     <li>Add / remove team: </li>
+                    <li>
+                        <button class="btn2" onclick="addTeam()">+</button>
+                        <button class="btn2" onclick="addTeam()">-</button>
+                    </li>
                 </ul>
             </div>
 
