--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -63,5 +63,9 @@
         <page id="game">
 
         </page>
+
+        <div id="debugWarning">
+            Warning: Debug mode activated, if you didnt mean to do this, press F2.
+        </div>
     </body>
 </html>
