--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -17,7 +17,7 @@
             <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
 
             <!-- Join box-->
-            <div id="join">
+            <box id="join">
                 <h2>Welcome to Code Games!</h2>
                 <form>
                     <h3>Name</h3>
@@ -28,19 +28,26 @@
                     <input class="inputTxt" id="welcomeInputRid" type="text" name="rid" placeholder="Room ID">
                     <input id="joinBtn" class="btn" type="button" onclick="joinBtnOnClick()" value="Join">
                 </form>
-            </div>
+            </box>
         </page>
 
         <!-- Lobby -->
         <page id="lobby">
             <!-- Player list -->
-            <div class="wall" id="players">
+            <box class="wall" id="players">
                 <h2>Players in Room</h2>
-                <ul></ul>
-            </div>
+                <box>
+                    <h3>Team Red</h3>
+                    <ul>
+                        <li>
+                            
+                        </li>
+                    </ul>
+                </box>
+            </box>
 
             <!-- Options list -->
-            <div class="wall" id="options">
+            <box class="wall" id="options">
                 <h2>Room Options</h2>
                 <ul>
                     <li>Add / remove team: </li>
@@ -49,7 +56,7 @@
                         <button class="btn2" onclick="addTeam()">-</button>
                     </li>
                 </ul>
-            </div>
+            </box>
 
             <!-- Logo / title -->
             <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
