--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -17,7 +17,7 @@
             <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
 
             <!-- Join box-->
-            <box id="join">
+            <div class="box" id="join">
                 <h2>Welcome to Code Games!</h2>
                 <form>
                     <h3>Name</h3>
@@ -28,35 +28,48 @@
                     <input class="inputTxt" id="welcomeInputRid" type="text" name="rid" placeholder="Room ID">
                     <input id="joinBtn" class="btn" type="button" onclick="joinBtnOnClick()" value="Join">
                 </form>
-            </box>
+            </div>
         </page>
 
         <!-- Lobby -->
         <page id="lobby">
             <!-- Player list -->
-            <box class="wall" id="players">
+            <div class="box wall" id="players">
                 <h2>Players in Room</h2>
-                <box>
+                <div class="box">
+                    <h3>Spectators</h3>
+                    <ul>
+                    </ul>
+                </div>
+                <!-- Example team
+                <div class="box">
                     <h3>Team Red</h3>
                     <ul>
                         <li>
-                            
+                            <div>Player1</div>
+                            <div>
+                                <button class="btn2">S</button>
+                                <button class="btn2">K</button>
+                                <button class="btn2">/\</button>
+                                <button class="btn2">V</button>
+                            </div>
                         </li>
                     </ul>
-                </box>
-            </box>
+                </div>
+                -->
+            </div>
 
             <!-- Options list -->
-            <box class="wall" id="options">
+            <div class="box wall" id="options">
                 <h2>Room Options</h2>
                 <ul>
                     <li>Add / remove team: </li>
                     <li>
                         <button class="btn2" onclick="addTeam()">+</button>
-                        <button class="btn2" onclick="addTeam()">-</button>
+                        <button class="btn2" onclick="removeTeam()">-</button>
                     </li>
                 </ul>
-            </box>
+            </div>
 
             <!-- Logo / title -->
             <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
@@ -75,7 +88,7 @@
 
         </page>
 
-        <div id="debugWarning">
+        <div class="box" id="debugWarning">
             Warning: Debug mode activated, if you didnt mean to do this, press F2.
         </div>
     </body>
