lobby functionally almost done

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -5,6 +5,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js" integrity="sha256-Dul4c09cdrWKXVtallPxF558lwxMwCC8dXJdZ0PVW54=" crossorigin="anonymous"></script>
         <script src="js/server.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/lobby/incoming.js"></script>
+        <script src="js/lobby/outgoing.js"></script>
+        <script src="js/lobby/htmlUpdate.js"></script>
+        <script src="js/welcome.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/welcome.css">
@@ -91,7 +95,7 @@
 
         </page>
 
-        <div class="box" id="debugWarning">
+        <div class="box debug" id="debugWarning">
             Warning: Debug mode activated, if you didnt mean to do this, press F2.
         </div>
     </body>
