--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -53,10 +53,10 @@
             <div class="box wall" id="options">
                 <h2>Room Options</h2>
                 <ul>
-                    <li>Add / remove team: </li>
+                    <li>Number of teams: </li>
                     <li>
-                        <button class="btn2" onclick="SERVER.setTeamCount(SERVER.room.options.teamCount + 1)">+</button>
-                        <button class="btn2" onclick="SERVER.setTeamCount(SERVER.room.options.teamCount - 1)">-</button>
+                        <button class="btn2 owner" onclick="SERVER.setTeamCount(SERVER.room.options.teamCount + 1)">+</button>
+                        <button class="btn2 owner" onclick="SERVER.setTeamCount(SERVER.room.options.teamCount - 1)">-</button>
                     </li>
                 </ul>
             </div>
@@ -64,13 +64,16 @@
             <!-- Logo / title -->
             <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
 
-            <!-- Start game button -->
-            <button id="start">Start</button>
-
             <!-- Name -->
-            <form id="name">
-                Hello <input class="inputTxt" id="nameEditField" type="text" name="nameChange">, press your name to change it
-            </form>
+            <div id="name">
+                <p>Username:</p>
+                <input class="inputTxt" id="nameField" type="text" oninput="nameEdit()">
+                <button class="btn2" id="nameEdit" onclick="nameEdit()">✏️</button>
+                <button class="btn2" id="nameSubmit" onclick="nameSubmit(); SERVER.setName(document.querySelector('#nameField').value)" style="display: none;">✔️</button>
+            </div>
+
+            <!-- Start game button -->
+            <button class="owner" id="start">Start</button>
         </page>
 
         <!-- Game -->
