--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -76,7 +76,7 @@
             <button class="owner" id="start">Start</button>
 
             <!-- Leave button -->
-            <button id="leave" onclick="leaveLobby()">Leave</button>
+            <button id="leave" onclick="leaveRoom()">Leave</button>
         </page>
 
         <!-- Game -->
