--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -53,7 +53,7 @@
             <div class="box wall" id="options">
                 <h2>Room Options</h2>
                 <ul>
-                    <li>Number of teams: </li>
+                    <li>Team count: </li>
                     <li>
                         <button class="btn2 owner" onclick="addTeam()">+</button>
                         <button class="btn2 owner" onclick="removeTeam()">-</button>
