--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -18,7 +18,7 @@
         <!-- Welcome -->
         <page id="welcome">
             <!-- Logo / title -->
-            <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
+            <img id="logo" onclick="leaveRoom()" src="https://i.imgur.com/zQRNL0g.png">
 
             <!-- Join box-->
             <div class="box" id="join">
