--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -18,7 +18,7 @@
         <!-- Welcome -->
         <page id="welcome">
             <!-- Logo / title -->
-            <img id="logo" src="https://i.imgur.com/zQRNL0g.png">
+            <img id="logo" src="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/img/logo/v2.png">
 
             <!-- Join box-->
             <div class="box" id="join">
@@ -62,7 +62,7 @@
             </div>
 
             <!-- Logo / title -->
-            <img id="logo" onclick="leaveRoom()" src="https://i.imgur.com/zQRNL0g.png">
+            <img id="logo" onclick="leaveRoom()" src="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/img/logo/v2.png">
 
             <!-- Name -->
             <div id="name">
