--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -62,6 +62,54 @@
                         <button class="btn2 owner" onclick="addTeam()">+</button>
                         <button class="btn2 owner" onclick="removeTeam()">-</button>
                     </li>
+                    <li>Words:</li>
+                    <li>
+                        <div class="owner" id="words">
+                            <ul>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                            </ul>
+                        </div>
+                        <input>
+                        </input>
+                    </li>
                 </ul>
             </div>
 
