--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -66,45 +66,17 @@
                     <li>
                         <div class="owner" id="words">
                             <ul>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li>Animals<img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
                             </ul>
                         </div>
                         <input>
