lobby change-aroo

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -8,6 +8,9 @@
         <script src="js/lobby/incoming.js"></script>
         <script src="js/lobby/outgoing.js"></script>
         <script src="js/lobby/htmlUpdate.js"></script>
+        <script src="js/lobby/lobby.js"></script>
+        <script src="js/lobby/playerList.js"></script>
+        <script src="js/lobby/options.js"></script>
         <script src="js/welcome.js"></script>
 
         <link rel="stylesheet" href="css/main.css">
