begin work on packs

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -72,17 +72,17 @@
                         <div class="owner" id="words">
                             <ul>
                                 <li><div>Animals</div><div class="btn2" onclick=""></div></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/flags/english.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
                             </ul>
                         </div>
                         <input>
