--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/welcome.css">
         <link rel="stylesheet" href="css/lobby.css">
-        <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-icon.png"/>
+        <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
     </head>
     <body>
         <div class="box debug" id="debugWarning">
@@ -24,7 +24,7 @@
         <!-- Welcome -->
         <page id="welcome">
             <!-- Logo / title -->
-            <img id="logo" src="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-welcome.png">
+            <img id="logo" src="./assets/Codegames-welcome.png">
 
             <!-- Join box-->
             <div class="box" id="join">
@@ -71,17 +71,17 @@
                         <div class="owner" id="words">
                             <ul>
                                 <li><div>Animals</div><div class="btn2" onclick=""></div></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
                             </ul>
                         </div>
                         <input>
@@ -91,7 +91,7 @@
             </div>
 
             <!-- Logo / title -->
-            <img id="logo" onclick="leaveRoom()" src="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-large.png">
+            <img id="logo" onclick="leaveRoom()" src="./assets/Codegames-large.png">
 
             <!-- Name -->
             <div id="name">
