--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="7; url='https://frederikja163.github.io/CodeGames/Front-end/index.html'" />
+        <!--<meta http-equiv="refresh" content="7; url='https://frederikja163.github.io/CodeGames/Front-end/index.html'" />-->
         <title>Codegames version2.0 featuring html and css</title>
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-icon.png"/>
     </head>
     <body>
         <p>Please follow <a href="./Front-end/index.html">this link</a> if you are not redirected.</p>
+        <iframe src="http://5.186.82.234:4204/Front-end/" title="W3Schools Free Online Web Tutorials"></iframe>
     </body>
 </html>
