word loading beginnings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frederikja163/CodeGames/version2.x-dev/Front-end/assets/Codegames-icon.png"/>
     </head>
     <body>
-        <p>Please follow <a href="./Front-end/index.html">this link</a> if you are not redirected.</p>
+        <iframe src="http://5.186.82.234:4204/"></iframe>
     </body>
 </html>
