--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -65,7 +65,15 @@
                         <button class="btn2 owner" onclick="removeTeam()">-</button>
                     </li>
                     <li id="langTitle">Language:</li>
-                    <li id="langOption">EN</li>
+                    <li id="langOption">
+                        <div id="dropBtn">
+                            <img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img>
+                            ▼
+                        </div>
+                        <div id="dropMenu">
+                            hej
+                        </div>
+                    </li>
                     <li id="wordsTitle">Words:</li>
                     <li id="wordsOption">
                         <div class="owner" id="words">
