--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -66,15 +66,19 @@
                     </li>
                     <li id="langTitle">Language:</li>
                     <li id="langOption">
-                        <div id="dropBtn">
-                            <img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img>
+                        <div class="btn" id="dropBtn" onclick="langBtn()">
+                            <img src="./assets/packs/en/flag.png" alt="EN"></img>
                             ▼
-                        </div>
-                        <div id="dropMenu">
-                            hej
                         </div>
                     </li>
                     <li id="wordsTitle">Words:</li>
+                    <li class="box" id="dropMenu">
+                        <ol>
+                            <li>
+                                hej
+                            </li>
+                        </ol>
+                    </li>
                     <li id="wordsOption">
                         <div class="owner" id="words">
                             <ul>
