--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -70,18 +70,14 @@
                     <li id="wordsOption">
                         <div class="owner" id="words">
                             <ul>
-                                <li><div>Animals</div><div class="btn2" onclick=""></div></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
-                                <li><div>Animals</div><img class="btn2" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" src="./assets/packs/en/flag.png" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" alt="EN"></img></li>
+                                <li><div>Animals</div><img class="btn2" onclick="" src="./assets/packs/en/flag.png" alt="EN"></img></li>
                             </ul>
                         </div>
                         <input>
