--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -74,13 +74,10 @@
                     <li id="wordsTitle">Words:</li>
                     <li class="box" id="dropMenu">
                         <ol>
-                            <li>
-                                hej
-                            </li>
                         </ol>
                     </li>
                     <li id="wordsOption">
-                        <div class="owner" id="words">
+                        <div class="box owner" id="words">
                             <ul>
                                 <li><div>Animals</div><img class="btn2" onclick="" src="./assets/packs/en/flag.png" alt="EN"></img></li>
                                 <li><div>Animals</div><img class="btn2" onclick="" alt="EN"></img></li>
