--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -82,7 +82,7 @@
                                 
                             </ul>
                         </div>
-                        <input id="wordsField">
+                        <input class="inputTxt" id="wordsField">
                         </input>
                     </li>
                 </ul>
