--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -84,6 +84,8 @@
                         </div>
                         <input class="inputTxt" id="wordsField">
                         </input>
+                        <button class="btn2" id="wordsEdit" onclick="wordsEdit()">✏️</button>
+                        <button class="btn2" id="wordsSubmit" onclick="wordsSubmit()" style="display: none;">✔️</button>
                     </li>
                 </ul>
             </div>
