--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -68,7 +68,7 @@
                     <li id="langOption">
                         <div class="btn" id="dropBtn" onclick="langBtn()">
                             <img src="./assets/packs/en/flag.png" alt="EN"></img>
-                            ▼
+                            <div>▼</div>
                         </div>
                     </li>
                     <li id="wordsTitle">Words:</li>
