owner tag to team count

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -61,8 +61,8 @@
                 <ul>
                     <li id="countTitle">Team count: </li>
                     <li id="countOption">
-                        <button class="btn2 owner" onclick="addTeam()">+</button>
-                        <button class="btn2 owner" onclick="removeTeam()">-</button>
+                        <button class="btn2 owner" onclick="addTeam()" style="display: none" >+</button>
+                        <button class="btn2 owner" onclick="removeTeam()" style="display: none" >-</button>
                     </li>
                     <li id="langTitle">Language:</li>
                     <li id="langOption">
