--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -16,6 +16,12 @@
         <link rel="stylesheet" href="css/welcome.css">
         <link rel="stylesheet" href="css/lobby.css">
         <link rel="icon" type="image/png" href="./assets/Codegames-icon.png"/>
+
+        <!--[if IE]>
+        <script type="text/javascript">
+        window.location = "https://www.google.com/chrome/";
+        </script>
+        <![endif]-->
     </head>
     <body>
         <div class="box debug" id="debugWarning">
