--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -73,9 +73,9 @@
                     <li id="langOption">
                         <div class="btn owner" id="dropBtn" onclick="langBtn()" style="display: none">
                             <img src="./assets/packs/en/flag.png" alt="EN"></img>
-                            <div>▼</div>
+                            <img src="./assets/miscIcons/arrowDown.png" style="width: var(--btn2Size)">
                         </div>
-                        <img id="currentLang" src="./assets/packs/en/flag.png" alt="EN"></img>
+                        <img class="guest" id="currentLang" src="./assets/packs/en/flag.png" alt="EN"></img>
                     </li>
                     <li id="wordsTitle">Words:</li>
                     <li class="box" id="dropMenu">
@@ -89,7 +89,7 @@
                             </ul>
                         </div>
                         <input class="inputTxt owner" id="wordsField" placeholder="Words" onchange="wordsChange()" style="display: none"></input>
-                        <div class="box" id="wordsTxt">Words</div>
+                        <div class="box guest" id="wordsTxt">Words</div>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
             </div>
 
             <!-- Start game button -->
-            <button class="owner" id="start">Start</button>
+            <button class="owner" id="start" style="display: none">Start</button>
 
             <!-- Leave button -->
             <button id="leave" onclick="leaveRoom()">Leave</button>
