--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -72,8 +72,8 @@
                     <li id="langTitle">Language:</li>
                     <li id="langOption">
                         <div class="btn owner" id="dropBtn" onclick="langBtn()" style="display: none">
-                            <img src="./assets/packs/en/flag.png" alt="EN"></img>
-                            <img src="./assets/miscIcons/arrowDown.png" style="width: var(--btn2Size)">
+                            <img src="./assets/packs/en/flag.png" alt="EN">
+                            <img src="./assets/miscIcons/arrowDown.png" alt="\/">
                         </div>
                         <img class="guest" id="currentLang" src="./assets/packs/en/flag.png" alt="EN"></img>
                     </li>
